--- a/src/pages/Account/Account.module.scss
+++ b/src/pages/Account/Account.module.scss
@@ -2,6 +2,12 @@
 
 .cardTitle {
   background: $table-head;
+
+  @media (max-width: $breakpoint) {
+    flex-wrap: wrap;
+    align-items: flex-start;
+    flex-direction: column;
+  }
 }
 
 .cardBodyContainer {
