--- a/src/pages/Account/Txs.module.scss
+++ b/src/pages/Account/Txs.module.scss
@@ -1,11 +1,22 @@
 @import "../../styles/list";
 
+.wrapper {
+  width: 200px;
+  display: flex;
+  justify-content: space-between;
+}
+
 .success {
   color: $green;
-  font-weight: 500;
+  font-weight: bolder;
 }
 
 .fail {
   color: $red;
-  font-weight: 500;
+}
+
+.amount {
+  display: flex;
+  white-space: pre;
+  flex-direction: column;
 }
